# SpaceShift

./: .gitignore  LICENSE  README.md  README_CN.md  package.json
.github/workflows/: release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser_killer.rs  browser_monitor.rs  cdp.rs  chrome.rs  db.rs  error.rs  lib.rs  main.rs  network_optimizer.rs  performance_monitor.rs  profile_manager.rs
src/api/: index.ts
src/components/: BackupDialog.vue  KillBrowserDialog.vue  PerformanceDialog.vue  ProfileCard.vue  ProfileForm.vue
src/components/layout/: AppHeader.vue  AppMain.vue
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/store/: profile.ts  theme.ts
src/styles/: global.scss  variables.scss
src/types/: index.ts
src/utils/: format.ts
